# cloud-project

./: .gitignore  Makefile  ansible-playbook-conditionals.yml  ansible-playbook-filters-debug.yml  ansible-playbook-filters.yml  ansible-playbook-install-git.yml  ansible-playbook-install-nginx-handlers.yml  ansible-playbook-loop.yml  environment-setting-roles.yml  filters.yml  install_git.yml  inventory.ini  main.yml  nginx.yml  playbook.yml  pyproject.toml
files/: nginx.conf
roles/create_user/tasks/: main.yml
roles/create_user/templates/: .gitconfig.j2
roles/install_git/tasks/: main.yml
roles/install_nginx/defaults/: main.yml
roles/install_nginx/handlers/: main.yml
roles/install_nginx/tasks/: main.yml
roles/install_nginx/templates/: index.html.j2
roles/install_nodejs/defaults/: main.yml
roles/install_nodejs/tasks/: main.yml
templates/: index.html.j2
