[tool.poetry]
name = "cloud-devops"
version = "0.1.0"
description = ""
authors = ["MacNoob <mcmagus@mail.ru>"]
readme = "README.md"
packages = [{include = "cloud_devops"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
